samples/_failures_safe/1761198608_e77042_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46c968b6.c: In function ‘main’:
./samples/SAFE/__tmp_46c968b6.c:165:35: error: expected ‘;’ at end of input
  165 |     for (int i = 0; i < edge_count
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_46c968b6.c:165:5: error: expected declaration or statement at end of input
  165 |     for (int i = 0; i < edge_count
      |     ^~~
